--- a/index.html
+++ b/index.html
@@ -180,6 +180,26 @@
                 name: "Teste de Pureza",
                 url: "./testepureza.html",
                 icon: "💧"
+            },
+            {
+                name: "AracajuCard",
+                url: "./aracajucard.html",
+                icon: "🃏"
+            },
+            {
+                name: "GamePlay",
+                url: "./gameplay.html",
+                icon: "🎮"
+            },
+            {
+                name: "Lista de Compras",
+                url: "./listacompras.html",
+                icon: "🛒"
+            },
+            {
+                name: "Placar Eletrônico",
+                url: "./placareletronico.html",
+                icon: "🏆"
             }
         ];
 
