--- a/loveapp.html
+++ b/loveapp.html
@@ -212,10 +212,8 @@
             <div class="image-container" id="imageContainer">
                 <div class="placeholder">Clique em sortear e divirta-se!</div>
             </div>
-            
             <button class="sortear-btn" id="sortearBtn">SORTEAR</button>
         </div>
-        <!-- Lista de imagens - Adicione suas URLs aqui -->
         <div id="imageList" style="display: none;">
             <img src="https://i.imgur.com/469ckvz.png" alt="1">
             <img src="https://i.imgur.com/8U6lXEU.png" alt="2">
@@ -271,7 +269,7 @@
     </main>
 
     <footer>
-        © 2025 Geovani Santos • Instagram: <a href="https://instagram.com/eusougeovani" target="_blank">@eusougeovani</a>
+        © 2025 Geovani Santos • Instagram: <a href="https://instagram.com/geovanikeeper" target="_blank">@geovanikeeper</a>
     </footer>
 
     <script>
