--- a/index.html
+++ b/index.html
@@ -169,22 +169,22 @@
             {
                 name: "Kama Sutra",
                 url: "./loveapp.html",
-                icon: "❤️"
+                icon: "🔥"
             },
             {
                 name: "Sorteador Loteria",
                 url: "./sorteloteria.html",
-                icon: "🎲"
+                icon: "🎰"
             },
             {
                 name: "Teste de Pureza",
                 url: "./testepureza.html",
-                icon: "💧"
+                icon: "📊"
             },
             {
                 name: "AracajuCard",
                 url: "./aracajucard.html",
-                icon: "🃏"
+                icon: "🚌"
             },
             {
                 name: "GamePlay",
