--- a/index.html
+++ b/index.html
@@ -161,10 +161,20 @@
     </div>
 
     <footer>
-        © 2025 Geovani Santos • Instagram: <a href="https://instagram.com/eusougeovani" target="_blank">@eusougeovani</a>
+        <p>&copy; <span id="anoAtual"></span> WebApp. Todos os Direitos Reservados.</p>
+        <p>Desenvolvido com <i class="fas fa-brain"></i> por <a href="https://eusougeovani.vercel.app/">GeoCODE Programmer</a></p>
     </footer>
 
     <script>
+        // Seleciona o elemento onde o ano será exibido
+        const elementoAno = document.getElementById('anoAtual');
+        // Cria um objeto Date para obter a data e hora atuais
+        const data = new Date();
+        // Pega apenas o ano (getFullYear)
+        const anoAtual = data.getFullYear();
+        // Insere o ano no elemento HTML
+        elementoAno.innerHTML = anoAtual;
+        
         const projects = [
             {
                 name: "Kama Sutra",
